bridge/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: dynoai-3
    labels:
        com.docker.compose.project: dynoai_3
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: dynoai_3
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: dynoai_3
                com.docker.compose.service: api
                com.docker.compose.network.dynoai-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: dynoai-api
                  image: dynoai_3-api
                  imagePullPolicy: IfNotPresent
                  args:
                    - python
                    - -m
                    - flask
                    - run
                    - --host=0.0.0.0
                    - --port=5001
                    - --reload
                    - --debugger
                  livenessProbe:
                    exec:
                        command: ['curl -f http://localhost:5001/api/health/ready']
                    periodSeconds: 30
                    initialDelaySeconds: 10
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: api-5001
                      containerPort: 5001
                  volumeMounts:
                    - name: app-uploads
                      mountPath: /app/uploads
                    - name: app-outputs
                      mountPath: /app/outputs
                    - name: app-runs
                      mountPath: /app/runs
                    - name: app-tables
                      mountPath: /app/tables
                      readOnly: true
                    - name: app-api
                      mountPath: /app/api
                      readOnly: true
                    - name: app-dynoai
                      mountPath: /app/dynoai
                      readOnly: true
                    - name: app-ai-tuner-toolkit-dyno-v1-2-py
                      mountPath: /app/ai_tuner_toolkit_dyno_v1_2.py
                      readOnly: true
                    - name: app-templates
                      mountPath: /app/templates
                      readOnly: true
                    - name: app-scripts
                      mountPath: /app/scripts
                      readOnly: true
            volumes:
                - name: app-uploads
                  hostPath:
                    path: C:\Users\dawso\OneDrive\Documents\GitHub\DynoAI_3\uploads
                - name: app-outputs
                  hostPath:
                    path: C:\Users\dawso\OneDrive\Documents\GitHub\DynoAI_3\outputs
                - name: app-runs
                  hostPath:
                    path: C:\Users\dawso\OneDrive\Documents\GitHub\DynoAI_3\runs
                - name: app-tables
                  hostPath:
                    path: C:\Users\dawso\OneDrive\Documents\GitHub\DynoAI_3\tools\tables
                  readOnly: true
                - name: app-api
                  hostPath:
                    path: C:\Users\dawso\OneDrive\Documents\GitHub\DynoAI_3\api
                  readOnly: true
                - name: app-dynoai
                  hostPath:
                    path: C:\Users\dawso\OneDrive\Documents\GitHub\DynoAI_3\dynoai
                  readOnly: true
                - name: app-ai-tuner-toolkit-dyno-v1-2-py
                  hostPath:
                    path: C:\Users\dawso\OneDrive\Documents\GitHub\DynoAI_3\tools\ai_tuner_toolkit_dyno_v1_2.py
                  readOnly: true
                - name: app-templates
                  hostPath:
                    path: C:\Users\dawso\OneDrive\Documents\GitHub\DynoAI_3\tools\templates
                  readOnly: true
                - name: app-scripts
                  hostPath:
                    path: C:\Users\dawso\OneDrive\Documents\GitHub\DynoAI_3\scripts
                  readOnly: true
