bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: dynoai-3
    labels:
        com.docker.compose.project: dynoai_3
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: dynoai_3
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: dynoai_3
                com.docker.compose.service: frontend
                com.docker.compose.network.dynoai-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: dynoai-frontend
                  image: dynoai_3-frontend
                  imagePullPolicy: IfNotPresent
                  args:
                    - npm
                    - run
                    - dev
                    - --
                    - --host
                    - 0.0.0.0
                  livenessProbe:
                    exec:
                        command: ['wget -q --spider http://localhost:80/health']
                    periodSeconds: 30
                    initialDelaySeconds: 5
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: frontend-80
                      containerPort: 80
                    - name: frontend-5173
                      containerPort: 5173
                  volumeMounts:
                    - name: app-src
                      mountPath: /app/src
                      readOnly: true
                    - name: app-index-html
                      mountPath: /app/index.html
                      readOnly: true
                    - name: app-vite-config-ts
                      mountPath: /app/vite.config.ts
                      readOnly: true
                    - name: app-tailwind-config-js
                      mountPath: /app/tailwind.config.js
                      readOnly: true
            volumes:
                - name: app-src
                  hostPath:
                    path: C:\Dev\DynoAI_3\frontend\src
                  readOnly: true
                - name: app-index-html
                  hostPath:
                    path: C:\Dev\DynoAI_3\frontend\index.html
                  readOnly: true
                - name: app-vite-config-ts
                  hostPath:
                    path: C:\Dev\DynoAI_3\frontend\vite.config.ts
                  readOnly: true
                - name: app-tailwind-config-js
                  hostPath:
                    path: C:\Dev\DynoAI_3\frontend\tailwind.config.js
                  readOnly: true
