bridge/base/api-service.yaml
# check if there is at least one published port

#! api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-published
    namespace: dynoai-3
    labels:
        com.docker.compose.project: dynoai_3
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: dynoai_3
        com.docker.compose.service: api
    ports:
        - name: api-5001
          port: 5001
          protocol: TCP
          targetPort: api-5001

# check if there is at least one published port
